# s-bank

./: .editorconfig  .gitignore  Cargo.toml  LICENSE-MIT  LICENSE.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  deploy-docs.yml  nightly.yml  pr.yml  release.yml  smoke.yml
components/strike-core/: Cargo.toml
components/strike-core/examples/: parity_dump.rs
components/strike-core/src/: envelope.rs  gate.rs  imperfection.rs  lib.rs  material.rs  pitch.rs
components/strike-core/tests/: behavior.rs
components/vactrol-core/: Cargo.toml
components/vactrol-core/benches/: lpg.rs
components/vactrol-core/src/: audio_path.rs  control_path.rs  lib.rs  simd.rs
components/vactrol-core/tests/: frequency_response.rs  resonance.rs  stability.rs
crates/vactrol-core/: Cargo.toml  cbindgen.toml
crates/vactrol-core/benches/: lpg.rs
crates/vactrol-core/src/: audio_path.rs  control_path.rs  ffi.rs  imperfection.rs  lib.rs  nonlinear.rs  oversample.rs  params.rs  reference.rs  simd.rs  vactrol.rs
crates/vactrol-core/tests/: frequency_response.rs  golden.rs  imperfection.rs  no_alloc.rs  resonance.rs  simd.rs  spectral.rs  stability.rs  vactrol_envelope.rs
crates/vactrol-harness/: Cargo.toml
crates/vactrol-harness/src/: main.rs
docs/: .gitignore  CI.md  DESIGN.md  REFERENCES.md  astro.config.mjs  development.mdx  docs.json  installation.mdx  introduction.mdx  package-lock.json  package.json
docs/modules/: strike.mdx  vactrol-lpg.mdx
docs/src/content/docs/: development.mdx  index.mdx  installation.mdx  library.mdx
docs/src/content/docs/modules/: strike.mdx  vactrol-lpg.mdx
docs/src/styles/: brand.css
docs/superpowers/specs/: 2026-06-02-polish-and-ci-design.md  2026-06-02-strike-gate-design.md
include/sbank/: sbank_dsp.hpp
logos/: README.md
modules/plugin/: Cargo.toml  cbindgen.toml
modules/plugin/src/: ffi_strike.rs  ffi_vactrol.rs  lib.rs
modules/rack/: Makefile  README.md  plugin.json  s_bank.h
modules/rack/src/: Strike.cpp  Strike_panel.inc  VactrolLPG.cpp  VactrolLPG_panel.inc  plugin.cpp  plugin.hpp
modules/rack/src/dsp/: SBankDSP.hpp
modules/rack/test/: README.md  dsp_smoke.cpp  golden_check.py  golden_dump.cpp  parity.cpp  parity_check.py  run_golden.sh  run_parity.sh
site/: README.md  index.html
site/css/: components.css  sections.css  system.css
site/js/: signal.js
testdata/golden/: imperfection_on.json  lowpass_sweep.json  manifest.json  pluck_both.json  strike_gated.json  strike_held.json  strike_ping.json  vca_tone.json
tools/harness/: Cargo.toml
tools/harness/src/: main.rs
tools/panelgen/: README.md  bake_font.py  check.py  fontdata.py  generate.py  panelkit.js  sam_panel.py  samefont.py  strokefont.js  strokefont.py
tools/panelgen/fonts/: README.md
vcv-adapter/: Makefile  README.md  plugin.json  vactrol_core.h
vcv-adapter/src/: VactrolLPG.cpp  plugin.cpp  plugin.hpp
