# S-Bank — the signal bank: a virtual-analog DSP component library for VCV Rack
# (part of the Sam-e / S- signal system). Each instrument is a portable Rust core
# with no VCV Rack SDK dependency, so the whole test/bench pipeline runs headless;
# a thin C++ adapter in `vcv-adapter/` links the staticlib over a C ABI. The first
# instrument in the bank is the vactrol low-pass gate (`vactrol-core`).
[workspace]
resolver = "2"
members = [
    "crates/vactrol-core",
    "crates/vactrol-harness",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ogabrielluiz/s-bank"

# Keep dev/test builds debuggable but not glacial.
[profile.dev]
opt-level = 1

# Release profile is what the audio thread runs; keep it lean.
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
