# S-Bank Rust reference workspace.
#
# The publishable VCV Rack plugin now lives as native C++ under `modules/rack`.
# These Rust crates remain useful as headless reference implementations, tests,
# benchmarks, and golden-file generators while the C++ port is verified.
[workspace]
resolver = "2"
members = [
    "components/vactrol-core",
    "components/strike-core",
    "tools/harness",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ogabrielluiz/s-bank"

# Keep dev/test builds debuggable but not glacial.
[profile.dev]
opt-level = 1

# Release profile is what the audio thread runs; keep it lean.
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
