[package]
name = "vactrol-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Portable virtual-analog vactrol low-pass gate DSP core (Buchla 292 style)"

[lib]
# A pure DSP component: plain rlib. The C ABI lives in modules/plugin (which links
# this), so the component stays clean and reusable; harness/tests/benches use the rlib.
crate-type = ["rlib"]

[dependencies]
num-traits = "0.2"
serde = { version = "1", features = ["derive"] }
# Deterministic, seedable, serializable streams for the imperfection layer (Phase 3).
rand = "0.8"
rand_chacha = "0.3"
# Portable 4-lane SIMD (maps to Rack's float_4) for the polyphonic voice block.
wide = "0.7"

[dev-dependencies]
# For constructing f32x4 inputs in SIMD tests/benches.
wide = "0.7"
# Spectral / aliasing / THD analysis (tests only).
realfft = "3"
rustfft = "6"
serde_json = "1"
# Audio-thread allocation guard.
assert_no_alloc = "1"
# Benchmarks (Phase 5 fleshes these out; codspeed-criterion-compat shim added then).
criterion = "0.5"

[[bench]]
name = "lpg"
harness = false
